--- a/index.html
+++ b/index.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css"/>
 </head>
 <body>
-    
+   <header>
+       <h1>LONNIE FOWLER</h1>
+       <nav>
+        <button><a href="index.html">HOME</a></button>
+        <button><a href="about.html">ABOUT</a></button>
+        <button><a href="contact.html">CONTACT</a></button>
+        <button><a href="projects.html">PROJECTS</a></button>
+       </nav>
+   
+   </header> 
+   <section class="firstsection">
+       <img src="https://picsum.photos/600/400"/>
+       <div class="bio">
+           <h2>LONNIE FOWLER</h2>
+          <button><a href="projects.html">My Projects</a></button>
+          <p>I like sunsets and kittens and long walks on the beach...sorry, wrong site.
+             This is an example of what I can do thusfar in my CSS class. Soon we will learn React
+             and Python.
+          </p>
+       </div>
+   </section>
+   <section>
+       <div class="row">
+           <div class="portfolio-element">
+              <img src="https://picsum.photos/300"/>
+              <p>Portfolio Piece</p> 
+           </div>
+           <div class="portfolio-element">
+            <img src="https://picsum.photos/300"/>
+            <p>Portfolio Piece</p> 
+         </div>
+         <div class="portfolio-element">
+            <img src="https://picsum.photos/300"/>
+            <p>Portfolio Piece</p> 
+         </div>
+         <div class="portfolio-element">
+            <img src="https://picsum.photos/300"/>
+            <p>Portfolio Piece</p> 
+         </div> 
+       </div>
+       <div class="row">
+        <div class="portfolio-element">
+           <img src="https://picsum.photos/300"/>
+           <p>Portfolio Piece</p> 
+        </div>
+        <div class="portfolio-element">
+         <img src="https://picsum.photos/300"/>
+         <p>Portfolio Piece</p> 
+      </div>
+      <div class="portfolio-element">
+         <img src="https://picsum.photos/300"/>
+         <p>Portfolio Piece</p> 
+      </div>
+      <div class="portfolio-element">
+         <img src="https://picsum.photos/300"/>
+         <p>Portfolio Piece</p> 
+      </div> 
+    </div>
+   </section>
+
+
+
+
+   <footer>
+       <h2>Like what you see here?</h2>
+       <button><a href="contact.html">Contact Me</a></button>
+       <div>
+        <h3>Connect With Me on Social Media</h3>
+        <nav class="social">
+           <button><a href="http://instagram.com" target="_blank"><i class=""></i>Instagram</a></button>
+           <button><a href="http://facebook.com" target="_blank"><i class=""></i>Facebook</a></button>
+           <button><a href="http://twitter.com" target="_blank"><i class=""></i>Twitter</a></button>
+        </nav>
+     </div>
+   </footer>
 </body>
 </html>
